fix non responsive on mobile phone

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -428,6 +428,6 @@ width: 55%;
 
 @media(min-width: 320px){
 .jumbotron ul li {
-  margin-left: -52px;
+  margin-left: -50px;
 }
 }
